--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -214,7 +214,7 @@ Leaves maximize carbon assimilation by maintaining metabolic optima, in a given 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
 **(paragraph on radiation as a driver)**
-Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation, increase in $T_{air}$ can induce evaporative cooling [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]. Dense canopies that buffer understory tend to absorb and reflect incoming radiation, therefore maintain greater $T_{leaf}$ than $T_{air}$, whereas open-forests, with greater light interception to forest floors, in come cases, reflect a less pronounced gradient of leaf temperatures, and in other cases maintain greater $T_{leaf}$-$T_{air}$ in the lower canopies [**REF**]
+Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, increase in $T_{air}$ can induce evaporative cooling [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]. Dense canopies that buffer understory tend to absorb and reflect incoming radiation, therefore maintain greater $T_{leaf}$ than $T_{air}$, whereas open-forests, with greater light interception to forest floors, in come cases, reflect a less pronounced gradient of leaf temperatures, and in other cases maintain greater $T_{leaf}$-$T_{air}$ in the lower canopies [**REF**]
 
 Greater upper canopy wind speeds (Fig. `r fig_NEON_vertical`) result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. 
 Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{leaf}$ and $T_{air}$. 
@@ -242,7 +242,7 @@ Particularly, in open forests with sparse distribution of trees, such as in need
 At night when solar radiation is not a factor, differences in $T_{leaf}$ across the vertical gradient are very modest; for instance, @bolstad_foliar_1999 observed similar nighttime $T_{leaf}$'s in the canopy and understory	of a temperate broadleaf forest. 
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
-Especially in closed-canopy forests with increased buffering capacity, large leaf to air temperature differences and high leaf temperatures are found in the upper canopies compared to lower canopies of tropical forests, that are substanially buffered such as in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; Miller; ], semi-deciduous tropical forest during the wet season in Panama [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a].   
+Especially in closed-canopy forests with increased buffering capacity, large leaf to air temperature differences and high leaf temperatures are found in the upper canopies compared to lower canopies of tropical forests that are substanially buffered, such as in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; Miller; ], semi-deciduous tropical forest during the wet season in Panama [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a].   
 
 In three forest types-- temperate, tropical wet and tropical moist, $T_{leaf max}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in upper canopies of all sites with $T_{leaf max}$ exceeding $T_{opt}$ at different canopy heights and temperatures in all forests, with no significant relationship between $T_{opt}$ and height. Additionally, with increasing height, $T_{leaf} - T_{air}$ difference increased in the upper canopies of all forests, exhibiting greatest $T_{leaf} - T_{air}$ in temperate deciduous forest compared to tropical moist and wet.
 - In a tropical wet and moist forests of Puerto Rico and temperate forests in Michigan, greater light input in exposed upper canopy leaves has been observed to increase leaf temperatures, sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a] 
@@ -253,13 +253,14 @@ In three forest types-- temperate, tropical wet and tropical moist, $T_{leaf max
 
 **Leaf thermoregulation largely depends on leaf traits. Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], shaped by the intensity and availability of light, in order to optimize C uptake, water uptake, thermoregulate and balance metabolism, across forest vertical strata, and thus show different degrees foliar plasticity [michaletzPlantThermoregulationEnergetics2015; *REFs*]**
 
-Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). 
-Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism and carbon balance (following section).
-It is unsuprising, then, that leaf traits vary dramatically across vertical gradients.
 
 #### *(clarify light vs height - 1 paragraph)*
 
-Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.However, the majority of relevant research has focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves. While light is the primary axis along which leaf traits vary, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
+Leaf traits in woody species take approximately 30-60 days to stabilize to integrated light after formation [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. As a result, degrees of high to low irradiance gives rise to a dichotomy of sun and shade leaf traits. Trait adaptation maximizes light use efficiency for photosynthesis at differing light levels and conditions mentioned above, while maintaing a balance between thermoregulation and water status [**REF**]. 
+
+Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). Exposed, typical sun leaves are often smaller in size and width, thicker, and hairier, with thicker cuticle and greater lobation than shade leaves, whereas shade leaves increase light capture efficiency by increasing their specific leaf area [SLA] and by investing in chlorophyll on a mass basis. "This enables shade leaves to realize similar light capture, under low light, to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000; @rozendaalPlasticityLeafTraits2006; Mathur et al. 2018]. Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism (following section) and carbon balance. It is unsuprising, then, that leaf traits vary dramatically across vertical gradients.
+
+While light based acclimation in leaf traits is well established, research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.However, the majority of relevant research has focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves. While light is the primary axis along which leaf traits vary, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
 
 In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*] such that gas exchange is strongly constrained by at the tops of(~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
 Under constant light conditions (photon flux density), increase in height (>35m) showed decrease in canopy stomatal conductance, along with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Adaptations to increasing height and hydraulic contraints show that leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] tend to decrease, whereas leaf mass per area (at greater than 20m) tends to increase [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
@@ -281,7 +282,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Leaf traits in woody species take approximately 30-60 days to stabilize to integrated light after formation [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. As a result, degrees of high to low irradiance gives rise to a dichotomy of sun and shade leaf traits. Trait adaptation maximizes light use efficiency for photosynthesis at differing light levels and conditions mentioned above. Therefore, typical sun leaves are often smaller in size and width, thicker, and hairier, with thicker cuticle and greater lobation than shade leaves, where as shade leaves increase light capture efficiency by increasing their specific leaf area [SLA] and by investing in chlorophyll on a mass basis, which "leads to a similar chlorophyll content on an area basis compared with sun leaves. This enables shade leaves to realize similar light capture to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000; @rozendaalPlasticityLeafTraits2006; Mathur et al. 2018]. Within-species, several studies point towards these common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissipation strategies and leaf temperature across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
+Within-species, several studies point towards these common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissipation strategies and leaf temperature across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
 
 
 An increasing number of studies point towards the importance of incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient [Chen et al. 2019], because LES theory was developed using mainly sun exposed (upper canopy) leaves. Given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in a simplified categorization of 'sun' and 'shade' leaves, due to variation based on within-canopy light, across functional groups, in canopy gaps, and with height and ontogeny (Niinemets et al., 2015; Ishii et al., 2018)
