--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -214,7 +214,7 @@ Leaves maximize carbon assimilation by maintaining metabolic optima, in a given 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
 **(paragraph on radiation as a driver)**
-Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, increase in $T_{air}$ can induce evaporative cooling [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]. Dense canopies that buffer understory tend to absorb and reflect incoming radiation, therefore maintain greater $T_{leaf}$ than $T_{air}$, whereas open-forests, with greater light interception to forest floors, in come cases, reflect a less pronounced gradient of leaf temperatures, and in other cases maintain greater $T_{leaf}$-$T_{air}$ in the lower canopies [**REF**]
+Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, increase in $T_{air}$ can induce evaporative cooling [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]. Dense canopies that buffer understory tend to absorb and reflect incoming radiation, therefore maintain greater $T_{leaf}$ than $T_{air}$, whereas open-forests, with greater light interception to forest floors, in come cases, exhibit a less pronounced gradient of leaf temperatures, and in other cases maintain greater $T_{leaf}$-$T_{air}$ in the lower canopies [**REF**]
 
 Greater upper canopy wind speeds (Fig. `r fig_NEON_vertical`) result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. 
 Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{leaf}$ and $T_{air}$. 
@@ -258,7 +258,7 @@ In three forest types-- temperate, tropical wet and tropical moist, $T_{leaf max
 
 Leaf traits in woody species take approximately 30-60 days to stabilize to integrated light after formation [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. As a result, degrees of high to low irradiance gives rise to a dichotomy of sun and shade leaf traits. Trait adaptation maximizes light use efficiency for photosynthesis at differing light levels and conditions mentioned above, while maintaing a balance between thermoregulation and water status [**REF**]. 
 
-Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). Exposed, typical sun leaves are often smaller in size and width, thicker, and hairier, with thicker cuticle and greater lobation than shade leaves, whereas shade leaves increase light capture efficiency by increasing their specific leaf area [SLA] and by investing in chlorophyll on a mass basis. "This enables shade leaves to realize similar light capture, under low light, to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000; @rozendaalPlasticityLeafTraits2006; Mathur et al. 2018]. Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism (following section) and carbon balance. It is unsuprising, then, that leaf traits vary dramatically across vertical gradients.
+Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). Exposed, typical sun leaves are often smaller in size and width, thicker, and hairier, with thicker cuticle and greater lobation than shade leaves. These traits also facilitates heat dissapation [Vogel] in sun leaves compared to shade. Whereas shade leaves increase light capture efficiency by increasing their specific leaf area [SLA] and by investing in chlorophyll on a mass basis. "This enables shade leaves to realize similar light capture, under low light, to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000; @rozendaalPlasticityLeafTraits2006; Mathur et al. 2018], however might not be most suitable in dissapating heat [Vogel]. Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism (following section) and carbon balance. It is unsuprising, then, that leaf traits vary dramatically across vertical gradients.
 
 While light based acclimation in leaf traits is well established, research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.However, the majority of relevant research has focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves. While light is the primary axis along which leaf traits vary, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
 
@@ -282,8 +282,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-species, several studies point towards these common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissipation strategies and leaf temperature across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
-
+Within-individuals in dense forests, canopy positions are exposed to different light and biophysical conditions in the upper, middle and lower canopy. Thus leaf traits vary accordingly. Whereas in open-forests or under consistent canopy light conditions, leaf traits vary on the basis of light exposure. In the former condition, several studies point towards common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissipation strategies and leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
 
 An increasing number of studies point towards the importance of incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient [Chen et al. 2019], because LES theory was developed using mainly sun exposed (upper canopy) leaves. Given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in a simplified categorization of 'sun' and 'shade' leaves, due to variation based on within-canopy light, across functional groups, in canopy gaps, and with height and ontogeny (Niinemets et al., 2015; Ishii et al., 2018)
 
@@ -304,7 +303,7 @@ nocite: |
 #### Morphological traits
 - Recent paper on influence on leaf size/shape in PCE – certain aspects of leaf shape were not as relevant as expected (Leigh et al. 2017? https://onlinelibrary.wiley.com/doi/full/10.1111/pce.12857)
 
-Leaf temperature is generally assumed to increase with leaf area ($LA$) [ Wright et al. 2019; Tserej & Feeley 2021]. Yet, thermal imagery shows that effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant than leaf area[@leighInfluenceLeafSize2017]. With increases in effective leaf width, thermal time constant also increases due to increase in boundary layer thickness and resistance, along with stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves. Small leaves are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Evidence shows that leaf temperature increased with effective leaf width [fauset et al. 2018]. However, leaf dissection such as lobes, leaf elongation and serration, enhancing a smaller characteristic dimension, thus facilitate efficient heat dissipation, and are evidently characteristics of sun exposed leaves than shaded leaves along a vertical gradient [@vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]. Other morphological characteristics such as increased petiole length, characteristic of leaves growing in high-light conditions and in exposed canopy positions, also contribute to heat dissapation [Niinemetes]
+Leaf temperature is generally assumed to increase with leaf area ($LA$) [ Wright et al. 2019; Tserej & Feeley 2021], however effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant than leaf area [@leighInfluenceLeafSize2017]. With increases in effective leaf width, thermal time constant also increases due to increase in boundary layer thickness and resistance, along with stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves that are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Evidence shows that leaf temperature increased with effective leaf width [fauset et al. 2018]. However, leaf dissection such as lobes, leaf elongation and serration, enhancing a smaller characteristic dimension, thus facilitate efficient heat dissipation, and are evidently characteristics of sun exposed leaves than shaded leaves along a vertical gradient [@vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]. Other morphological characteristics in exposed canopy positions such as increased petiole length, cuticle thickness, trichomes, stomatal density also enhance heat dissapation compared to shade leaves [Niinemetes]
 
  
 #### Biochemical and physiological traits
@@ -322,7 +321,7 @@ High light stimulates the need for photoprotection in leaves in order to protect
 
 
 ##### *Leaf lifespan* [Elsa: phenology more broadly? - leaf lifespan, fruiting, flowering links to temperature and thermal gradients?]
-*Leaf lifespan generally increases with LMA. LMA and leaflifespan is greater with available light, and largely depends on cost of carbon investment in a leaf, which varies across species [**double check**] Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
+*Leaf lifespan generally increases with LMA. LMA and leaflifespan is greater with available light, and largely depends on the cost of carbon investment in a leaf, which varies across species sun vs. shade leaves [**double check**] Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
 
 ##### *Deciduousness*
 
@@ -332,7 +331,7 @@ High light stimulates the need for photoprotection in leaves in order to protect
 
 ### Interspecific varaiation 
 
-Across ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show significant differences in leaf traits, however, the difference has been largely attributed to changes in light conditions rather than ontogeny [Rosendaal et al. 2006], therefore maintaing similar responses to changes in light with increasing height such as in within-species. Under constant light conditions of open-grown canopy and understory, for example in large gaps, evidence shows that canopy trees showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance compared to saplings, attributing the differences in traits to ontogeny [Thomas and Winner, 2002; Houter and Pons 2012]. On the basis of phenology, temperate understory trees have been observed to leaf out earlier than canopy due to ontogenetic variation in tree size rather than biophysical conditions [Vitasse et al. 2013], however, increase in spring temperatures has shown to have implications on understory phenology, relative to canopy trees [Zohnner and Renne, 2019]
+Across ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show significant differences in leaf traits in their biophysical environment, however, the difference has been largely attributed to changes in light conditions rather than ontogeny itself [Rosendaal et al. 2006], therefore maintaing similar responses to changes in light with increasing height, as observed in within-species gradient. Under constant light conditions of open-grown canopy and understory, for example in large gaps, evidence shows that canopy trees showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance compared to saplings, attributing the differences in traits to ontogeny [Thomas and Winner, 2002; Houter and Pons 2012]. On the basis of phenology, temperate understory trees tended to leaf out earlier than canopy due to ontogenetic variation in tree size rather than biophysical conditions [Vitasse et al. 2013], and, increase in spring temperatures has shown to have implications on understory phenology, relative to canopy trees [Zohnner and Renne, 2019]
 
 With increasing height and age, competition for light decreases as availability  of light increases in dense forests. However, depending on growth strategies of species occupying the understory, leaf traits might differ due to species inherent light requirements. Early successional species are considered more shade intolerant than late successional species that are more shade tolerant. Ontogenetic differences between the two in the understory suggests lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities in shade tolerators than in intolerators [@niinemetsControversyTraitsConferring2006]. However, the findings from the above review conflicts with  Kitajima 1994 who found for tropical seedlings; shade intolerance species grew faster in the sun and in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is no a consensus?
 
