--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -209,12 +209,12 @@ The strength of buffering also varies with respect to distance to the coast, top
 ### Biophysical drivers
 
 **Many of the vertical gradient biophysical and trait variables reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
-Leaves maximize carbon assimilation by maintaining metabolic optima, in a given circumstance, through the adaptation of their leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020].Thus, $T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
+Maintaining optimum leaf temperature in relation to the biophysical environment, maximizes carbon assimilation by maintaining metabolic optima, in a given circumstance. This is done through the adaptation of leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020].Thus, $T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost (such as transpiration) to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
 **(paragraph on radiation as a driver)**
-Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, increase in $T_{air}$ can induce evaporative cooling [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]. Dense canopies that buffer understory tend to absorb and reflect incoming radiation, therefore maintain greater $T_{leaf}$ than $T_{air}$, whereas open-forests, with greater light interception to forest floors, in come cases, exhibit a less pronounced gradient of leaf temperatures, and in other cases maintain greater $T_{leaf}$-$T_{air}$ in the lower canopies [**REF**]
+Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, increase in $T_{air}$ can induce evaporative cooling [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]. Dense canopies that buffer understory tend to absorb and reflect incoming radiation, therefore maintain greater $T_{leaf}$ than $T_{air}$ compared to lower canopy or understory, whereas open-forests, with greater light interception to forest floors, in some cases, exhibit a less pronounced gradient of leaf temperatures, and in other cases maintain greater $T_{leaf}$-$T_{air}$ in the lower canopies [**REF**]
 
 Greater upper canopy wind speeds (Fig. `r fig_NEON_vertical`) result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. 
 Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{leaf}$ and $T_{air}$. 
@@ -251,14 +251,14 @@ In three forest types-- temperate, tropical wet and tropical moist, $T_{leaf max
 
 ## Leaf traits 
 
-**Leaf thermoregulation largely depends on leaf traits. Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], shaped by the intensity and availability of light, in order to optimize C uptake, water uptake, thermoregulate and balance metabolism, across forest vertical strata, and thus show different degrees foliar plasticity [michaletzPlantThermoregulationEnergetics2015; *REFs*]**
+**Leaf thermoregulation largely depends on leaf traits. Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], shaped by the intensity and availability of light and water demand, in order to optimize C uptake, thermoregulate and balance metabolism, across forest vertical strata, and thus show different degrees foliar plasticity [michaletzPlantThermoregulationEnergetics2015; Zweiniecki et al 2004]**
 
 
 #### *(clarify light vs height - 1 paragraph)*
 
-Leaf traits in woody species take approximately 30-60 days to stabilize to integrated light after formation [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. As a result, degrees of high to low irradiance gives rise to a dichotomy of sun and shade leaf traits. Trait adaptation maximizes light use efficiency for photosynthesis at differing light levels and conditions mentioned above, while maintaing a balance between thermoregulation and water status [**REF**]. 
+Leaf morphological adaptation to the local microenvironement takes place during leaf expansion [Zweineicki et al. 2004]. Degrees of direct to diffused light and consequental water demands shape sun vs. shade leaves and their necessary vascular architecture [Casal et al. 2011, Zweineicki et al. 2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. Therefore, exposed sun leaves are typically smaller in size and width, thicker, hairier and have greater lobation, and buffer biophysical conditions for shade leaves. Whereas shade leaves adapt to diffused light and stable microenvironment through investing in light capture efficiency by expanding specific leaf area (SLA) [Sack et al. 2006; Chazdon et al. 1996, Poorter et al. 2000; @rozendaalPlasticityLeafTraits2006; Mathur et al. 2018]. Respective leaf traits also play a role in heat dissapation where exposed sun leaves are more efficient in dissapting heat than buffered shade leaves [Vogel].
 
-Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). Exposed, typical sun leaves are often smaller in size and width, thicker, and hairier, with thicker cuticle and greater lobation than shade leaves. These traits also facilitates heat dissapation [Vogel] in sun leaves compared to shade. Whereas shade leaves increase light capture efficiency by increasing their specific leaf area [SLA] and by investing in chlorophyll on a mass basis. "This enables shade leaves to realize similar light capture, under low light, to sun leaves at a lower biomass investment" [Chazdon et al. 1996, Poorter et al. 2000; @rozendaalPlasticityLeafTraits2006; Mathur et al. 2018], however might not be most suitable in dissapating heat [Vogel]. Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism (following section) and carbon balance. It is unsuprising, then, that leaf traits vary dramatically across vertical gradients.
+Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism (following section) and carbon balance. It is unsuprising, then, that leaf traits vary dramatically across vertical gradients.
 
 While light based acclimation in leaf traits is well established, research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.However, the majority of relevant research has focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves. While light is the primary axis along which leaf traits vary, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
 
@@ -282,7 +282,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-individuals in dense forests, canopy positions are exposed to different light and biophysical conditions in the upper, middle and lower canopy. Thus leaf traits vary accordingly. Whereas in open-forests or under consistent canopy light conditions, leaf traits vary on the basis of light exposure. In the former condition, several studies point towards common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissipation strategies and leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
+Within-individuals exposed canopies subjected to harsher light and biophysical conditions, substanially buffer inner and lower canopies. Thus leaf traits in canopy positions vary accordingly [Casal et al. 2011]. Several studies point towards common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient across individual trees [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
 
 An increasing number of studies point towards the importance of incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient [Chen et al. 2019], because LES theory was developed using mainly sun exposed (upper canopy) leaves. Given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in a simplified categorization of 'sun' and 'shade' leaves, due to variation based on within-canopy light, across functional groups, in canopy gaps, and with height and ontogeny (Niinemets et al., 2015; Ishii et al., 2018)
 
@@ -301,21 +301,19 @@ nocite: |
 
 
 #### Morphological traits
-- Recent paper on influence on leaf size/shape in PCE – certain aspects of leaf shape were not as relevant as expected (Leigh et al. 2017? https://onlinelibrary.wiley.com/doi/full/10.1111/pce.12857)
 
-Leaf temperature is generally assumed to increase with leaf area ($LA$) [ Wright et al. 2019; Tserej & Feeley 2021], however effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant than leaf area [@leighInfluenceLeafSize2017]. With increases in effective leaf width, thermal time constant also increases due to increase in boundary layer thickness and resistance, along with stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves that are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Evidence shows that leaf temperature increased with effective leaf width [fauset et al. 2018]. However, leaf dissection such as lobes, leaf elongation and serration, enhancing a smaller characteristic dimension, thus facilitate efficient heat dissipation, and are evidently characteristics of sun exposed leaves than shaded leaves along a vertical gradient [@vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]. Other morphological characteristics in exposed canopy positions such as increased petiole length, cuticle thickness, trichomes, stomatal density also enhance heat dissapation compared to shade leaves [Niinemetes]
-
+Along the vertical gradient, leaf temperature increases with effective leaf width and leaf size [Fauset et al. 2018], along with thermal time constant that is longer due to the increase in boundary layer thickness and stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018]. Therefore, the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves that are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Exposed leaves reduce light exposures, and thus leaf temperature, by maintaining vertical leaf angles, or through temporary wilting [Niinemetes]1998. Other trait adaptions to dissapting heat such as lobes, serration, longer petiole length and stomtal density are evidently characteristics of sun exposed leaves than shaded leaves, help maintain a lower leaf temperature along a vertical gradient [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006]
  
 #### Biochemical and physiological traits
 
- In temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing season LMA and $N area$ continued to increase in the upper canopy due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016].In addition, carbon isotope composition also increased with height, independent of light [@cobleLightAcclimationOptimizes2015].
+
+-Mitsutoshi kitao 2018: Canopy nitrogen distribution is optimized to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks. P uptake cannoy keep up wth increased growth at higher light [Poorter et al. 2019]
+ In temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing season LMA and $N area$ continued to increase in the upper canopy due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016].
  
 ##### *(Carotenoids/Xanthophyll cycle pigments)*
 
-High light stimulates the need for photoprotection in leaves in order to protect internal photosystem II from chronic photoinhibition. Thus, leaves exposed to greater irradiance have greater pools of xanthophyll pigments, which are photoprotective pigments comprised of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] that convert excess light into heat energy dissipation through non photochemical quenching of excitation energy, enabling short-term acclimation to high temperature and light [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. These are found to be proportional to within-canopy light gradients at an inter- and intra-species level. Therefore, $VAZ$ is lower in shaded leaves and greater in sun leaves, as observed among temperate tree species [@niinemetsAcclimationHighIrradiance1998]. In neotropical forests, foliage exposed to higher irradiance in the canopy showed greater b-carotene and vioxanthin-cycle pools on an area or chlorophyll basis compared to low light leaves that showed greater mass-based chlorophyll, lutein and neoxanthin carotenoids [Mastubara et al. 2009]
+Proportional to vertical light gradients at an inter- and intra-species level, sun exposed leaves have greater pools of xanthophyll pigments, comprised of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] than in shaded leaves. [$VAZ$]--an antioxidant scavenging function--protects against cellular damage by converting excess light into heat energy dissipation through non photochemical quenching of excitation energy, enabling short-term acclimation to high temperature and light [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. 
   
--	antioxidant scavenging function- protect against cellular damage
-
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
@@ -331,14 +329,11 @@ High light stimulates the need for photoprotection in leaves in order to protect
 
 ### Interspecific varaiation 
 
-Across ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show significant differences in leaf traits in their biophysical environment, however, the difference has been largely attributed to changes in light conditions rather than ontogeny itself [Rosendaal et al. 2006], therefore maintaing similar responses to changes in light with increasing height, as observed in within-species gradient. Under constant light conditions of open-grown canopy and understory, for example in large gaps, evidence shows that canopy trees showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance compared to saplings, attributing the differences in traits to ontogeny [Thomas and Winner, 2002; Houter and Pons 2012]. On the basis of phenology, temperate understory trees tended to leaf out earlier than canopy due to ontogenetic variation in tree size rather than biophysical conditions [Vitasse et al. 2013], and, increase in spring temperatures has shown to have implications on understory phenology, relative to canopy trees [Zohnner and Renne, 2019]
+Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show significant differences in leaf traits in their biophysical environment, however, the differences have been largely attributed to adaption to light conditions rather than ontogeny itself, therefore maintaing similar responses to changes in light with increasing height, as observed in within-species gradient [Rosendaal et al. 2006; Thomas and Winner, 2002; Houter and Pons 2012]. However, under constant light conditions of open-grown canopy and understory trees, for example in large gaps, evidence shows that canopy trees showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance compared to saplings, attributing the differences in traits to tree-size ontogeny [Thomas and Winner, 2002; Houter and Pons 2012] which also shapes leaf temperature. Across different species, while common adaptations to light and water are observed, inherent traits differences such as leaf shape, size and width, stomtal conductance levels influence leaf temperatures. Therefore, some species might be able to tolerate greater heat stress at a vertical gradient than others [[Fauset et al. 2018]. 
 
-With increasing height and age, competition for light decreases as availability  of light increases in dense forests. However, depending on growth strategies of species occupying the understory, leaf traits might differ due to species inherent light requirements. Early successional species are considered more shade intolerant than late successional species that are more shade tolerant. Ontogenetic differences between the two in the understory suggests lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities in shade tolerators than in intolerators [@niinemetsControversyTraitsConferring2006]. However, the findings from the above review conflicts with  Kitajima 1994 who found for tropical seedlings; shade intolerance species grew faster in the sun and in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is no a consensus?
+On the basis of phenology, temperate understory  trees tended to leaf out earlier than canopy due to ontogenetic variation in tree size rather than biophysical conditions [Vitasse et al. 2013], and, increase in spring temperatures has shown to have implications on understory phenology, relative to canopy trees [Zohnner and Renner, 2019]. However, May spring heat waves can negetively impact partially expanded canopy leaves by inducing leaf shedding, more than saplings and understory [Filewood and Thomas, 2013]. Ontogenetic differences also suggests shade tolerators have lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities than in intolerators [@niinemetsControversyTraitsConferring2006] reflecting shade adaptation and avoidance strategies [Casal, 2013]. While shade intolerant species experience greater heterogeneity in light during ontogeny [poorter et al. 2013]. However, these findings conflict with  Kitajima 1994 who found for tropical seedlings; shade intolerance species grew faster in the sun and in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is no a consensus? How will leaf temperature vary between the two?
 
-Shade intolerant species experience greater heterogeneity in light during ontogeny [why?-nidhi],thus LMA responds to changes in light, with shade-intolerant species displaying higher plasticity in response to light [H. Poorter, U. Niinemets, L. Poorter, I. J. Wright, R. Villar, Causes and consequences of variation in leaf mass per area (LMA): A meta-analysis. New Phytol. 182, 565–588 (2009).].Rozendaal et al. 2006 found no significant trait differences with ontogeny and adult stature trees. Koike et al. 2001 has more info about this.   
-
-
-*(KAT: a lot of this content should probably move up the the intro to this section)*
+ *(KAT: a lot of this content should probably move up the the intro to this section)*
 
 
 ##### Isoprene production
@@ -364,7 +359,7 @@ nocite: |
 ### Stomatal conductance
 Photosynthesis can be largely constrained by stomatal conductance. 
 
-- Max stomatal conductance - increases with canopy height (Kenzo et al. 2015), however stomatal conductance limitation is also greater, and earlier with greater canopy height [Sanches et al. 2009] 
+- Max stomatal conductance - increases with canopy height (Kenzo et al. 2015), however stomatal limitation is steeper also greater with hydraulic limitation, in sun leaves and in exposed canopies [Sanches et al. 2009; Hernandez] 
 Max transpiration rate - increases with canopy height (Kenzo et al. 2015), and quickly decreases with increasing VPD at greater heights [Scaffer].
 -understory leaves open their stomata wider than upper canopy leaves [Kosugi et al. 2021]. Stomatal apeture, also controls heat dissapation through evaporative cooling [Taiz and Zeiger]. Stomatal opening is greater in understory compared to canopy
 
@@ -376,10 +371,9 @@ This is primarily driven by the greater light available to sun leaves. Photosynt
 In response to the greater light availability, sun leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubsico, and multiple layers of palisade parenchyma. Light saturation levels differ between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy)
 The vertical gradient in photosynthetic rates is also influenced by available concentration of N and P. (and water availability)
 
-Photosynthesis has a peaked response to temperature, where photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; Slot & Winter 2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure, accompanied by an increase in leaf temperature in dense upper canopies tends to decrease phtotosynthesis [REF](e.g. Slot & Winter 2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (refs. e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). 
+Leaf temperature reflects photosynthetic optimum temperature [**REF**]. Photosynthesis has a peaked response to temperature, where photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; Slot & Winter 2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure, accompanied by an increase in leaf temperature in dense upper canopies tends to decrease phtotosynthesis [REF](e.g. Slot & Winter 2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (refs. e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). 
 
-Photosynthesis will also be affected by heat stress, when photoinhibition reduces photosynthesis either as a result of photoprotective; non-photochemical quenching or related to irreversible leaf damage leading to leaf necrosis. At increasing temperatures, photosynthetic system II [PSII] is particularly vulnerable. Damage to PSII  can lead to decreased electron transport rates and photosynthetic failure. Irreversible damage to PSII is done at 40-60C [Baker 2008; @feeley_thermal_2020]
-Leaves in upper canopy tend to experience more heat stress and greater photoinhibition than lower canopy leaves in conditions of water stress or drought. [@niinemetsWorldwideAnalysisWithincanopy2015] 
+Photosynthesis will also be affected by heat stress, when photoinhibition reduces photosynthesis either as a result of photoprotective; non-photochemical quenching or related to irreversible leaf damage leading to leaf necrosis. At increasing temperatures, photosynthetic system II [PSII] is particularly vulnerable. Damage to PSII  can lead to decreased electron transport rates and photosynthetic failure. Irreversible damage to PSII is done at 40-60C [Baker 2008; @feeley_thermal_2020]. Leaves in upper canopy tend to experience more heat stress and greater photoinhibition than lower canopy leaves in conditions of water stress or drought. [@niinemetsWorldwideAnalysisWithincanopy2015] 
 
 *[thoughts: plasticity vs change in tree species composition through the canopy; differences in variability of microenvironments through the profile - highest lower down in canopy?; life history / investment strategies and hence, leaf life spans at leaves at the top vs bottom of the canopy]-- M N. Smith [agreed. Again the importance of differentiating between within-species and among species trait variation. Also; steepness of the vertical gradient in light and VPD. In very tall trees a gradient in water potential might cause a gradient in stomatal limitations of net photosynthesis]*
 
