--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2263,6 +2263,15 @@
   number = {5}
 }
 
+@article{grataniPlantPhenotypicPlasticity,
+  title = {Plant {{Phenotypic Plasticity}} in {{Response}} to {{Environmental Factors}}},
+  author = {Gratani, Loretta},
+  journaltitle = {Advances in Botany},
+  pages = {18},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KQQAI4TV\\Gratani - Plant Phenotypic Plasticity in Response to Environ.pdf},
+  langid = {english}
+}
+
 @article{gregoriouEffectsReducedIrradiance2007,
   title = {Effects of Reduced Irradiance on Leaf Morphology, Photosynthetic Capacity, and Fruit Yield in Olive ({{Olea}} Europaea {{L}}.)},
   author = {Gregoriou, K. and Pontikis, K. and Vemmos, Stavros},
@@ -8757,6 +8766,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\A6BAFV2T\\22-15-16-1125.pdf},
   langid = {english},
   number = {15-16}
+}
+
+@article{zwienieckiHydraulicLimitationsImposed2004,
+  title = {Hydraulic Limitations Imposed by Crown Placement Determine Final Size and Shape of {{Quercus}} Rubra {{L}}. Leaves},
+  author = {Zwieniecki, M. A. and Boyce, C. K. and Holbrook, N. M.},
+  date = {2004},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {27},
+  pages = {357--365},
+  issn = {1365-3040},
+  doi = {10.1111/j.1365-3040.2003.01153.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-3040.2003.01153.x},
+  urldate = {2021-04-19},
+  abstract = {The canopies of large broad-leaf trees exhibit significant heterogeneity in both micro-environmental conditions and leaf morphology. Whether the visible differences in the size and shape of leaves from the top and bottom of the crown are determined prior to bud break or result from different patterns of leaf expansion is not known. Analysis of ontogenetic changes of both the degree of lobing and vein density in Quercus rubra demonstrates that leaves throughout the crown are identical in size and shape at the time of bud break. Morphological adaptation to the local micro-environment takes place during the expansion phase and starts after the determination of the vascular architecture has been completed. Leaves from the bottom of the crown undergo greater expansion in the tissue close to the main veins than occurs either in the more peripheral tissue of the same leaf or anywhere in leaves from the top of the crown. This results in a water transport system that is well suited to the low evaporative rates near the bottom of the crown, but inadequate for the conditions found at the top of the tree. Acclimation of leaf form and function based upon differential expansion may be entirely driven by the local hydraulic demand during the expansion phase, resulting in leaf size and vein density being determined during development by the same hydraulic properties which will constrain the size of leaf that can be functionally supported at maturity.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-3040.2003.01153.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\TINTB6VH\\Zwieniecki et al. - 2004 - Hydraulic limitations imposed by crown placement d.pdf;C\:\\Users\\Me\\Zotero\\storage\\4HL6GUYZ\\j.1365-3040.2003.01153.html},
+  keywords = {leaf development,leaf expansion,leaf hydraulic properties,leaf lobing,Leaf shape,Quercus rubra},
+  langid = {english},
+  number = {3}
 }
 
 
